# mdtools

./: .clang-tidy  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: ci-linux.yml  ci-macos.yml  coverity-scan.yml  snapshots-windows.yml
include/mdtools/: dplcfile.hh  fmvoice.hh  framedplc.hh  framemapping.hh  ignore_unused_variable_warning.hh  mappingfile.hh  pattern_name.hh  pattern_name_table.hh  singledplc.hh  singlemapping.hh  songtrack.hh  sstrack.hh  ssvram.hh  tile.hh  vram.hh
src/lib/: Makefile.am  dplcfile.cc  dplcfile.h  dplcfile.hh  fmvoice.cc  framedplc.cc  framedplc.h  framedplc.hh  framemapping.cc  framemapping.h  framemapping.hh  ignore_unused_variable_warning.cc  mappingfile.cc  mappingfile.h  mappingfile.hh  pattern_name.cc  pattern_name.h  pattern_name.hh  pattern_name_table.cc  pattern_name_table.h  pattern_name_table.hh  singledplc.cc  singledplc.h  singledplc.hh  singlemapping.cc  singlemapping.h  singlemapping.hh  songtrack.cc  sstrack.cc  sstrack.h  sstrack.hh  ssvram.cc  ssvram.h  ssvram.hh  tile.cc  tile.h  tile.hh  vram.cc  vram.h  vram.hh
src/tools/: Makefile.am  chunk_census.cc  chunk_splitter.cc  enitool.cc  fmvoice.cc  fmvoice.h  fmvoice.hh  mapping_tool.cc  plane_map.cc  recolor_art.cc  smps2asm.cc  songtrack.cc  songtrack.h  songtrack.hh  split_art.cc  ssexpand.cc  voice_dumper.cc
